# rockycode

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/tasks/: dev10.json  test20.json
prompts/: README.md  rocky-v1.txt  rocky-v2-search-first.txt  rocky-v3-decisive.txt  rocky-zh-closer.txt  rocky-zh-full-closer.txt  rocky-zh-full.txt
rockycode/: banner.py  cli.py  config.py  onboarding.py  palette.py  pricing.py  routines.py  score.py  session.py
rockycode-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
rockycode-vscode/media/: chat.html
rockycode-vscode/src/: diffManager.ts  editorContext.ts  extension.ts  permissionManager.ts  protocol.ts  rockyConnection.ts  rockyProvider.ts  statusBar.ts  webview-highlight.ts
rockycode/dream/: __init__.py  core.py  judge.py  mining.py  proposals.py
rockycode/engine/: __init__.py  artifact.py  budget.py  checks.py  compaction.py  container.py  effort.py  events.py  explore.py  goal.py  goal_review.py  goal_session.py  headless.py  loop.py  lsp.py  mcp.py  modes.py  outcome.py  permission.py  planmode.py  providers.py  redact.py  safety.py  sandbox.py  server.py  skills.py  titler.py  tools.py  trajectory.py  web.py  worktree.py
rockycode/memory/: __init__.py  index.py  store.py
rockycode/modes/learn/: learn.md
rockycode/modes/research/: deep-research.md  paper-reading.md  prove.md  whiteboard.md
rockycode/prompts/: rocky.py
rockycode/runners/: agent.py  data.py  raw.py
rockycode/skills/architecture-viz/: SKILL.md  template.html
rockycode/skills/lean-prover/: SKILL.md  torchlean-api.md
rockycode/tui/: __init__.py  app.py  exitsheet.py  goal_screen.py  mdterm.py  mdview.py  modepicker.py  permission.py  plangate.py  prompt_history.py  proposalcard.py  resume.py  rocky_pet.py  routinecard.py
tests/: fake_lsp_server.py  fake_mcp_server.py  invariants.py  real_planmode.py  real_reasoning_roundtrip.py  real_tool_contract.py  run_all.py  run_real.py  smoke_approver.py  smoke_artifact.py  smoke_bash.py  smoke_bash_grant.py  smoke_bilang_prompt.py  smoke_budget.py  smoke_checks.py  smoke_compaction.py  smoke_container.py  smoke_credentials.py  smoke_dream.py  smoke_dream_trigger.py  smoke_effort.py  smoke_engine.py  smoke_exec.py  smoke_explore.py  smoke_goal.py  smoke_goal_driver.py  smoke_goal_review.py  smoke_goal_runner.py  smoke_interrupt.py  smoke_judge.py  smoke_lsp.py  smoke_mcp.py  smoke_mdterm.py  smoke_mdview.py  smoke_memory.py  smoke_memory_index.py  smoke_mining.py  smoke_modes.py  smoke_onboarding.py  smoke_outcome.py  (+38 more)
